--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Malla Psicología UST</title>
+  <title>Psicología U. Santo Tomás</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
-  <h1>Malla Interactiva - Psicología UST</h1>
+  <h1>Psicología U. Santo Tomás</h1>
   <div class="malla" id="malla"></div>
+  <footer>
+    <p>Creado por <a href="https://instagram.com/ctlinaa__" target="_blank">@ctlinaa__</a></p>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
