--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
-  <h1>Psicología U. Santo Tomás</h1>
+
+  <header class="encabezado">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Logo_UST_Chile.png" alt="Logo UST" class="logo-ust" />
+    <h1>Psicología U. Santo Tomás</h1>
+    <div class="simbolo-psi">Ψ</div>
+  </header>
+
   <div class="malla" id="malla"></div>
+
   <footer>
     <p>Creado por <a href="https://instagram.com/ctlinaa__" target="_blank">@ctlinaa__</a></p>
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
