--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Psicología U. Santo Tomás</title>
-  <link rel="stylesheet" href="estilos.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Malla Psicología - Santo Tomás</title>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 
-  <header class="encabezado">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Logo_UST_Chile.png" alt="Logo UST" class="logo-ust" />
-    <h1>Psicología U. Santo Tomás</h1>
-    <div class="simbolo-psi">Ψ</div>
-  </header>
+  <div class="encabezado">
+    <img src="logo u.png" alt="Logo Santo Tomás" class="logo-ust" />
+    <img src="png-clipart-psychology-symbol-psychologist-psychological-types-psi-greece-miscellaneous-text.png" alt="Símbolo de Psicología" class="simbolo-psi" />
+  </div>
 
-  <div class="malla" id="malla"></div>
+  <h1>Malla de Psicología</h1>
+
+  <div class="malla">
+    <!-- Ejemplo de semestre -->
+    <div class="semestre">
+      <h2>1er Semestre</h2>
+      <div class="ramo">Introducción a la Psicología</div>
+      <div class="ramo">Biología General</div>
+      <div class="ramo">Sociología</div>
+      <div class="ramo">Comunicación Oral y Escrita</div>
+      <div class="ramo">Inglés I</div>
+    </div>
+
+    <!-- Puedes duplicar esta estructura para más semestres -->
+  </div>
 
   <footer>
-    <p>Creado por <a href="https://instagram.com/ctlinaa__" target="_blank">@ctlinaa__</a></p>
+    <p>Universidad Santo Tomás - Psicología</p>
+    <a href="#">Volver arriba</a>
   </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
 
