--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
   <!-- Logos en las esquinas -->
-  <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Logo_UST_Chile.png" alt="Logo UST" class="logo-esquina izquierda">
-  <img src="psicologia.png" alt="Símbolo Psicología" class="logo-esquina derecha">
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fco.pinterest.com%2Fpin%2F610448924494717568%2F&psig=AOvVaw0cVxhbIhm1vuARXMOzHUKd&ust=1752533558118000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLCqkrz2uo4DFQAAAAAdAAAAABAE" alt="Logo UST" class="logo-esquina izquierda">
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pngegg.com%2Fes%2Fpng-ybggc&psig=AOvVaw0991dzX69QrDmlqW0hYgko&ust=1752532428860000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLDZv5jyuo4DFQAAAAAdAAAAABAE" class="logo-esquina derecha">
 
   <h1 class="titulo-central">Psicología U. Santo Tomás</h1>
 
