--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Logos en las esquinas -->
 <img src="img/logo-ust.png" alt="Logo UST" class="logo-esquina izquierda">
-<img src="img/psicologia.png" alt="Símbolo Psicología" class="logo-esquina derecha">
+<img src="img/psicología.png" alt="Símbolo Psicología" class="logo-esquina derecha">
 
   <h1 class="titulo-central">Psicología U. Santo Tomás</h1>
 
